<resources>
    <string name="app_name">Notes</string>
    <string name="action_refresh">Aktualisieren</string>

    <string name="new_note">Neue Notiz</string>
    <string name="delete_note">Notiz löschen</string>
    <string name="delete_note_question">Möchten Sie die Notiz %1$s löschen?</string>
    <string name="title">Titel</string>
    <string name="text">Notiz</string>

    <string name="cancel">Abbrechen</string>
    <string name="delete">Löschen</string>

    <string name="yellow">Gelb</string>
    <string name="green">Grün</string>
    <string name="blue">Blau</string>
    <string name="red">Rot</string>

    <!-- Content descriptions for XML -->
    <string name="content_description_splash_image">lightbulb</string>
    <string name="content_description_delete">Notiz löschen</string>
    <string name="content_description_more">Weitere Optionen</string>
    <string name="content_description_fab">add new note</string>

    <string name="createdDate_descending">Datum absteigend</string>
    <string name="createdDate_ascending">Datum aufsteigend</string>
    <string name="title_descending">Titel absteigend</string>
    <string name="title_ascending">Titel aufsteigend</string>
    <string name="color_descending">Farbe absteigend</string>
    <string name="color_ascending">Farbe aufsteigend</string>

    <string name="created_at">Erstellt am:</string>


</resources>